con estilo mas claro para los li

--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -18,13 +18,10 @@
 
         <div class="content-block">
             <br>
-            <p>
+            <p class="background-light">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam assumenda eligendi, expedita illo labore nostrum quos soluta sunt voluptatibus? Animi consectetur, corporis cupiditate dolor ex in numquam tempore tenetur!
             </p>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam assumenda eligendi, expedita illo labore nostrum quos soluta sunt voluptatibus? Animi consectetur, corporis cupiditate dolor ex in numquam tempore tenetur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid commodi consequatur dolores ducimus error facilis rerum veniam voluptatum. Eius ex fuga odio odit provident quidem quisquam reprehenderit saepe sed, temporibus?
-            </p>
-            <p><a href="#" class="button button-fill boton-chico close-popup">Volver</a></p>
+
 
         </div>
     </div>
