--- a/SanJuanSaludAPP/www/caps.html
+++ b/SanJuanSaludAPP/www/caps.html
@@ -20,7 +20,7 @@
             <div class="content-block">
                 <br>
 
-                <div class="list-block listaBlanca">
+                <div class="list-block background-light">
 
                     <ul  id="caps-container" >
 
