--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -21,7 +21,7 @@
                 <br>
                 <h3 class="color-h3" id="caps-tittle"></h3>
                 <div id="capsImg"></div>
-                <div id="capsDetail-container">
+                <div id="capsDetail-container" class="background-light">
 
 
                     <div id="caps-basic" style="color: #fff;"> </div>
