--- a/SanJuanSaludAPP/www/departamentos.html
+++ b/SanJuanSaludAPP/www/departamentos.html
@@ -20,7 +20,7 @@
         <div class="page-content">
             <div class="content-block">
 
-                <div class="list-block listaBlanca">
+                <div class="list-block background-light">
                     <br>
 
                     <ul  id="dptos-container" >
