--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -21,7 +21,7 @@
 
             <br>
 
-            <div class="list-block">
+            <div class="list-block background-light">
                 <ul>
                     <!-- Text inputs -->
                     <li>
@@ -48,7 +48,7 @@
                     <!--Teléfono-->
                     <li>
                         <div class="item-content">
-                            <div class="item-media"><i class="icon f7-icons">telephone</i></div>
+                            <div class="item-media"><i class="icon f7-icons">phone_fill</i></div>
                             <div class="item-inner">
                                 <div class="item-input">
                                     <input class="asdf" type="email" placeholder="Teléfono">
