con estilo mas claro para los li

--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -133,13 +133,13 @@
                 </ul>
 
 
-                <a href="#"  class="button button-fill button-raised boton-chico">Enviar </a>
+                <a href="#"  id="enviarFormulario" class="button button-fill button-raised boton-chico">Enviar </a>
 
 
 
+            </div>
         </div>
     </div>
-</div>
 
 
 
