--- a/SanJuanSaludAPP/www/GPS.html
+++ b/SanJuanSaludAPP/www/GPS.html
@@ -18,9 +18,8 @@
         <div class="content-block">
             <br>
             <br>
-
-
-            <div id="googleMap" style="width:100%;height:400px;"></div>
+            <div id="googleMap" class="background-light" style="width:100%;height:400px;"></div>
+            <div id="googleMapt" class="background-light" style="width:100%;height:auto;"></div>
         </div>
     </div>
 </div>
