--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -19,25 +19,26 @@
             <div class="content-block">
                 <br>
                 <br>
-                <h3 class="color-h3" id="caps-tittle"></h3>
-                <div id="capsImg"></div>
-                <div id="capsDetail-container" class="background-light">
 
-
-                    <div id="caps-basic" style="color: #fff;"> </div>
-                    <div id="caps-eyh" class="list-block accordion-list" style="color: #fff;">
-                        <h4 class="color-h3 ">Seleccione una especialidad para consultar horarios:</h4>
-
-                        <!--acá van los caps con append por jquery-->
-                    </div>
-                    <div id="caps-lc" style="color: #fff;">
-                        <h4 class="color-h3">Líneas de Colectivo disponibles</h4>
+                    <div id="caps-basic" class="background-light" style="color: #fff;">
+                        <h3 class="color-h3" id="caps-tittle"></h3>
+                        <div id="capsImg"></div>
                     </div>
 
-                    <div id="Distancia" style="width:100%;height:auto; color: #fff; font-weight: bold"></div>
-                    <div id="googleMapDetail" style="width:100%;height:300px;"></div>
+                    <div class="background-light">
+                        <div id="caps-eyh" class="list-block accordion-list blancaynegrita" >
 
-                </div>
+
+                            <!--acá van los caps con append por jquery-->
+                        </div>
+                        <br>
+                        <br>
+                        <h3 class="color-h3">Geolocalización:</h3>
+                        <div id="Distancia" style="width:100%;height:auto; " class="blancaynegrita"></div>
+                        <div id="googleMapDetail"  style="width:100%;height:300px;"></div>
+                    </div>
+
+
 
             </div>
         </div>
