adelanto de estilos

--- a/SanJuanSaludAPP/www/departamentos.html
+++ b/SanJuanSaludAPP/www/departamentos.html
@@ -19,14 +19,9 @@
 
         <div class="page-content">
             <div class="content-block">
+                <br>
+                <div class="list-block " id="dptos-container">
 
-                <div class="list-block background-light">
-                    <br>
-
-                    <ul  id="dptos-container" >
-
-
-                    </ul>
 
                 </div>
 
