--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -26,14 +26,13 @@
                     </div>
 
 
-                        <div id="caps-eyh" class="list-block accordion-list blancaynegrita" >
+                        <div id="caps-eyh" class="list-block accordion-list blancaynegrita background-light" >
 
 
                             <!--acá van los caps con append por jquery-->
                         </div>
 
 
-                <br>
 
                 <div class="background-light">
                     <h3 class="color-h3">Geolocalización:</h3>
