--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -16,17 +16,14 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <title>SanJuanSaludAPP</title>
     </head>
-    <body class="theme-white">
+    <body class="theme-white ">
     <div class="statusbar-overlay"></div>
     <div class="views">
         <div class="view view-main">
 
-
             <div class="pages" data-ignore-cache="true">
 
-
-
-                <div class="page navbar-fixed" data-page = "index">
+            <div class="page navbar-fixed" data-page = "index">
 
                     <!--Navigation Bar-->
                     <div class = "navbar">
@@ -86,29 +83,22 @@
                         </div>
 
                         <!--footer-->
-                        <footer style="bottom: 0; ">
-                            <div class="row">
-                                <div class="col-100 ">
-                                    <div class = "navbar" >
-                                        <div class = "navbar-inner">
-                                            <div  style="font-size: 12px !important; margin: 0 auto;" class = "center"><p>División Informática 2017 - San Juan Argentina</p></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </footer>
+
 
                     </div>
                 </div>
             </div>
+
+        </div>
+        <div class="toolbar">
+            <div class="toolbar-inner">
+                <p>
+                Salud Pública División Informática 2017 - San Juan Argentina
+                </p>
+            </div>
         </div>
 
-
     </div>
-
-
-
-
 
     <!-- Links popover -->
     <div class="popover popover-links">
