--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -18,9 +18,8 @@
     <div class="page-content">
 
         <div class="content-block">
-
             <br>
-
+            <form name="proturForm" id="proturForm">
             <div class="list-block background-light">
                 <ul>
                     <!-- Text inputs -->
@@ -138,6 +137,7 @@
 
 
             </div>
+            </form>
         </div>
     </div>
 
