--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -93,7 +93,7 @@
         <div class="toolbar">
             <div class="toolbar-inner">
                 <p>
-                Salud Pública División Informática 2017 - San Juan Argentina
+                Ministerio de Salud Pública - San Juan Argentina
                 </p>
             </div>
         </div>
