--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -19,10 +19,11 @@
             <div class="content-block">
                 <br>
                 <br>
+                    <h3 class="color-h3 blancaynegritag" id="caps-tittle"></h3>
+                    <div id="capsImg"></div>
 
                     <div id="caps-basic" class="background-light" style="color: #fff;">
-                        <h3 class="color-h3" id="caps-tittle"></h3>
-                        <div id="capsImg"></div>
+
                     </div>
 
 
