--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -68,69 +68,22 @@
                         </div>
                     </li>
 
-                    <!-- Sexo -->
 
-                    <li>
-                        <label class="label-radio item-content">
-                            <input type="radio" name="my-radio" value="F">
-                            <div class="item-media">
-                                <i class="icon icon-form-radio"></i>
-                            </div>
-                            <div class="item-inner">
-                                <div class="item-title">Femenino</div>
-                            </div>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="label-radio item-content">
 
-                            <input type="radio" name="my-radio" value="F">
-                            <div class="item-media">
-                                <i class="icon icon-form-radio"></i>
-                            </div>
-                            <div class="item-inner">
-                                <div class="item-title">Masculino</div>
-                            </div>
-                        </label>
-                    </li>
-                    <li>
-                        <label class="label-radio item-content">
-
-                            <input type="radio" name="my-radio" value="F">
-                            <div class="item-media">
-                                <i class="icon icon-form-radio"></i>
-                            </div>
-                            <div class="item-inner">
-                                <div class="item-title">Otra identidad</div>
-                            </div>
-                        </label>
-                    </li>
-                    <!-- Date -->
-                    <li>
-                        <div class="item-content">
-                            <!--<div class="item-media"><i class="icon f7-icons">calendar</i></div>-->
-                            <div class="item-inner">
-                                <div class="item-title label">Nacimiento:</div>
-                                <div class="item-input">
-                                    <input type="date" placeholder="Nacimiento" >
-                                </div>
-                            </div>
-                        </div>
-                    </li>
                     <!-- Textarea -->
                     <li class="align-top">
                         <div class="item-content">
                             <!--<div class="item-media"><i class="icon f7-icons">chat</i></div>-->
                             <div class="item-inner">
-                                <div class="item-title label">Comentarios:</div><br>
+
                                 <div class="item-input">
-                                    <textarea></textarea>
+                                    <textarea   placeholder="Comentarios"></textarea>
                                 </div>
                             </div>
                         </div>
                     </li>
                 </ul>
-
+                <br>
 
                 <a href="#"  id="enviarFormulario" class="button button-fill button-raised boton-chico">Enviar </a>
 
