--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -15,14 +15,17 @@
     </div>
 
     <div class="pages">
-
+        <br>
+        <br>
         <div class="content-block">
+
+            <h3>Temas de ayuda</h3>
+            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaCSDispositivo.html" >Buscar centros de salud con tu dispositivo móvil</a></div>
             <br>
-            <p class="background-light">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam assumenda eligendi, expedita illo labore nostrum quos soluta sunt voluptatibus? Animi consectetur, corporis cupiditate dolor ex in numquam tempore tenetur!
-            </p>
-
-
+            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="#">Buscar centros de salud por departamento</a></div>
+            <br>
+            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="#">Solicitar contacto con un PROTUR</a></div>
+            <br>
         </div>
     </div>
 </div>
