--- a/SanJuanSaludAPP/www/index.html
+++ b/SanJuanSaludAPP/www/index.html
@@ -69,7 +69,7 @@
 
                                     <!--Boton PROTUR-->
                                     <a href="#" id="btnProtur" data-ignore-cache="true" class="button button-fill button-raised boton">
-                                        <span><br>Programar <br>turno<br> <br><img src="images/btnProtur.svg" alt=""></span>
+                                        <span><br>Solicitar <br>turno (PROTUR)<br> <br><img src="images/btnProtur.svg" alt=""></span>
                                     </a>
                                 </p>
                             <div class="row">
