--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -19,11 +19,11 @@
             <div class="content-block">
                 <br>
                 <br>
-                    <h3 class="color-h3 blancaynegritag" id="caps-tittle"></h3>
-                    <div id="capsImg"></div>
 
-                    <div id="caps-basic" class="background-light" style="color: #fff;">
+                    <div id="caps-basic" class="background-light" style="color: #000;">
 
+                        <h3 class="color-h3 blancaynegritag" id="caps-tittle"></h3>
+                        <div id="capsImg"></div>
                     </div>
 
 
@@ -36,7 +36,7 @@
 
 
                 <div class="background-light">
-                    <h3 class="color-h3">Geolocalización:</h3>
+                    <h3 class="color-h3 blancaynegritag">Geolocalización</h3>
                     <div id="Distancia" style="width:100%;height:auto; " class="blancaynegrita"></div>
                     <div id="googleMapDetail"  style="width:100%;height:300px;"></div>
                 </div>
