--- a/SanJuanSaludAPP/www/ayuda.html
+++ b/SanJuanSaludAPP/www/ayuda.html
@@ -22,9 +22,15 @@
             <h3>Temas de ayuda</h3>
             <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaCSDispositivo.html" >Buscar centros de salud con tu dispositivo móvil</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="#">Buscar centros de salud por departamento</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaCSDepartamentos.html">Buscar centros de salud por departamento</a></div>
             <br>
-            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="#">Solicitar contacto con un PROTUR</a></div>
+            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaCSProtur.html">Solicitar contacto con un PROTUR</a></div>
+            <br>
+            <div class="linkAyuda" ><div class="icon f7-icons">help</div><a href="ayudaContacto.html">¿Preguntas o sugerencias?</a></div>
+            <br>
+            <div class="linkAyuda" ><div class="icon f7-icons">social_facebook</div><a href="#">Compartilo en Facebook</a></div>
+            <br>
+            <div class="linkAyuda" ><div class="icon f7-icons">social_twitter</div><a href="#">Compartilo en Twitter</a></div>
             <br>
         </div>
     </div>
