--- a/SanJuanSaludAPP/www/ayudaCSProtur.html
+++ b/SanJuanSaludAPP/www/ayudaCSProtur.html
@@ -1,4 +1,4 @@
-<div class="page " data-page="ayudaCSDispositivo">
+<div class="page " data-page="ayudaCSProtur">
 
     <!-- Navbar -->
     <div class="navbar">
@@ -9,7 +9,7 @@
                     <span>Volver</span>
                 </a>
             </div>
-            <div class="right"><p>Buscar con tu dispositivo móvil</p></div>
+            <div class="right"><p>Contactar con un PROTUR</p></div>
         </div>
     </div>
 
@@ -18,9 +18,9 @@
         <br>
         <div class="content-block">
 
-            <h3>Buscar con tu dispositivo móvil </h3>
+            <h3>Contactar con un PROTUR</h3>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nihil quia quibusdam sed totam ut? Accusantium adipisci cumque dolorem minima pariatur perspiciatis quas! Ad expedita laboriosam perferendis quo, sint ullam!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi nihil quia quibusdam sed totam ut? Accusantium adipisci cumque dolorem minima pariatur perspiciatis quas! Ad expedita laboriosam perferendis quo, sint ullam!</p>
 
         </div>
     </div>
