--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -20,14 +20,14 @@
                 <br>
                 <br>
 
-                    <div id="caps-basic" class="background-light" style="color: #000;">
+                    <div id="caps-basic" class="background-light">
 
-                        <h3 class="color-h3 blancaynegritag" id="caps-tittle"></h3>
+                        <h3 class="color-h3 " id="caps-tittle"></h3>
                         <div id="capsImg"></div>
                     </div>
 
 
-                        <div id="caps-eyh" class="list-block accordion-list blancaynegrita background-light" >
+                        <div id="caps-eyh" class="list-block accordion-list background-light" >
 
 
                             <!--acá van los caps con append por jquery-->
@@ -36,8 +36,8 @@
 
 
                 <div class="background-light">
-                    <h3 class="color-h3 blancaynegritag">Geolocalización</h3>
-                    <div id="Distancia" style="width:100%;height:auto; " class="blancaynegrita"></div>
+                    <h3 class="color-h3 ">Geolocalización</h3>
+                    <div id="Distancia" ></div>
                     <div id="googleMapDetail"  style="width:100%;height:300px;"></div>
                 </div>
 
