--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -68,6 +68,51 @@
                         </div>
                     </li>
 
+                    <!--Departamento-->
+                    <li>
+                        <div class="item-content">
+                            <div class="item-title label">Departamento</div>
+                            <div class="item-inner">
+                                <div class="item-input">
+                                    <select>
+                                        <option value="0">Otro</option>
+                                        <option value="1">25 de Mayo</option>
+                                        <option value="2">9 de Julio</option>
+                                        <option value="3">Albardón</option>
+                                        <option value="4">Angaco</option>
+                                        <option value="5">Calingasta</option>
+                                        <option value="6">Capital</option>
+                                        <option value="7">Caucete</option>
+                                        <option value="8">Chimbas</option>
+                                        <option value="9">Iglesia</option>
+                                        <option value="10">Jachal</option>
+                                        <option value="11">Pocito</option>
+                                        <option value="12">Rawson</option>
+                                        <option value="13">Rivadavia</option>
+                                        <option value="14">San Martín</option>
+                                        <option value="15">Santa Lucía</option>
+                                        <option value="16">Sarmiento</option>
+                                        <option value="17">Ullum</option>
+                                        <option value="18">Valle Fértil</option>
+                                        <option value="19">Zonda</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
+
+                    <!--Dirección-->
+                    <li>
+                        <div class="item-content">
+                            <div class="item-inner">
+                                <div class="item-input">
+                                    <input type="email" placeholder="Dirección">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+
 
 
                     <!-- Textarea -->
