--- a/SanJuanSaludAPP/www/capsDetail.html
+++ b/SanJuanSaludAPP/www/capsDetail.html
@@ -13,6 +13,10 @@
                 <div class="right"><p>Información del CAPS</p></div>
 
             </div>
+
+
+
+
         </div>
 
         <div class="page-content">
@@ -36,9 +40,15 @@
 
 
                 <div class="background-light">
+
                     <h3 class="color-h3 ">Geolocalización</h3>
+
                     <div id="Distancia" ></div>
-                    <div id="googleMapDetail"  style="width:100%;height:300px;"></div>
+
+                    <div id="googleMapDetail"  style="width:100%;height:300px;">
+
+
+                    </div>
                 </div>
 
 
