--- a/SanJuanSaludAPP/www/caps.html
+++ b/SanJuanSaludAPP/www/caps.html
@@ -20,12 +20,8 @@
             <div class="content-block">
                 <br>
 
-                <div class="list-block background-light">
+                <div class="list-block " id="caps-container">
 
-                    <ul  id="caps-container" >
-
-
-                    </ul>
 
                 </div>
 
