--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -19,121 +19,102 @@
 
         <div class="content-block">
             <br>
-            <form name="proturForm" id="proturForm">
-            <div class="list-block background-light">
-                <ul>
-                    <!-- Text inputs -->
-                    <li>
-                        <div class="item-content">
-                            <div class="item-media"><i class="icon f7-icons">person</i></div>
-                            <div class="item-inner">
+            <form class="list-block background-light" id="proturForm">
 
-                                <div class="item-input">
-                                    <input type="text" placeholder="Nombre y Apellido">
+
+                            <div class="item-content">
+                                <div class="item-media"><i class="icon f7-icons color-red">person</i></div>
+                                <div class="item-inner">
+
+                                    <div class="item-input">
+                                        <input type="text" placeholder="Nombre y Apellido">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="item-content">
-                            <div class="item-media"><i class="icon f7-icons">email</i></div>
-                            <div class="item-inner">
-                                <div class="item-input">
-                                    <input type="email" placeholder="Correo electrónico">
+
+                            <div class="item-content">
+                                <div class="item-media"><i class="icon f7-icons  color-red">email</i></div>
+                                <div class="item-inner">
+                                    <div class="item-input">
+                                        <input type="email" placeholder="Correo electrónico">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                    <!--Teléfono-->
-                    <li>
-                        <div class="item-content">
-                            <div class="item-media"><i class="icon f7-icons">phone_fill</i></div>
-                            <div class="item-inner">
-                                <div class="item-input">
-                                    <input class="asdf" type="email" placeholder="Teléfono">
+
+                            <div class="item-content">
+                                <div class="item-media"><i class="icon f7-icons color-red">phone_fill</i></div>
+                                <div class="item-inner">
+                                    <div class="item-input">
+                                        <input class="asdf" type="email" placeholder="Teléfono">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
 
-                    <!--Otro Teléfono-->
-                    <li>
-                        <div class="item-content">
-                            <div class="item-media"><i class="icon f7-icons">telephone</i></div>
-                            <div class="item-inner">
-                                <div class="item-input">
-                                    <input type="email" placeholder="Otro teléfono (Si es posible)">
+                            <div class="item-content">
+                                <div class="item-media"><i class="icon f7-icons  color-red">telephone</i></div>
+                                <div class="item-inner">
+                                    <div class="item-input">
+                                        <input type="email" placeholder="Otro teléfono (Si es posible)">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
 
-                    <!--Departamento-->
-                    <li>
-                        <div class="item-content">
-                            <div class="item-title label">Departamento</div>
-                            <div class="item-inner">
-                                <div class="item-input">
-                                    <select>
-                                        <option value="0">Otro</option>
-                                        <option value="1">25 de Mayo</option>
-                                        <option value="2">9 de Julio</option>
-                                        <option value="3">Albardón</option>
-                                        <option value="4">Angaco</option>
-                                        <option value="5">Calingasta</option>
-                                        <option value="6">Capital</option>
-                                        <option value="7">Caucete</option>
-                                        <option value="8">Chimbas</option>
-                                        <option value="9">Iglesia</option>
-                                        <option value="10">Jachal</option>
-                                        <option value="11">Pocito</option>
-                                        <option value="12">Rawson</option>
-                                        <option value="13">Rivadavia</option>
-                                        <option value="14">San Martín</option>
-                                        <option value="15">Santa Lucía</option>
-                                        <option value="16">Sarmiento</option>
-                                        <option value="17">Ullum</option>
-                                        <option value="18">Valle Fértil</option>
-                                        <option value="19">Zonda</option>
-                                    </select>
+                            <div class="item-content">
+                                <div class="item-title label">Departamento</div>
+                                <div class="item-inner">
+                                    <div class="item-input">
+                                        <select>
+                                            <option value="0">Otro</option>
+                                            <option value="1">25 de Mayo</option>
+                                            <option value="2">9 de Julio</option>
+                                            <option value="3">Albardón</option>
+                                            <option value="4">Angaco</option>
+                                            <option value="5">Calingasta</option>
+                                            <option value="6">Capital</option>
+                                            <option value="7">Caucete</option>
+                                            <option value="8">Chimbas</option>
+                                            <option value="9">Iglesia</option>
+                                            <option value="10">Jachal</option>
+                                            <option value="11">Pocito</option>
+                                            <option value="12">Rawson</option>
+                                            <option value="13">Rivadavia</option>
+                                            <option value="14">San Martín</option>
+                                            <option value="15">Santa Lucía</option>
+                                            <option value="16">Sarmiento</option>
+                                            <option value="17">Ullum</option>
+                                            <option value="18">Valle Fértil</option>
+                                            <option value="19">Zonda</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
 
-
-                    <!--Dirección-->
-                    <li>
-                        <div class="item-content">
-                            <div class="item-inner">
-                                <div class="item-input">
-                                    <input type="email" placeholder="Dirección">
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-input">
+                                        <input type="email" placeholder="Dirección">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
 
+                            <div class="item-content">
+                                <!--<div class="item-media"><i class="icon f7-icons">chat</i></div>-->
+                                <div class="item-inner">
 
-
-                    <!-- Textarea -->
-                    <li class="align-top">
-                        <div class="item-content">
-                            <!--<div class="item-media"><i class="icon f7-icons">chat</i></div>-->
-                            <div class="item-inner">
-
-                                <div class="item-input">
-                                    <textarea   placeholder="Comentarios"></textarea>
+                                    <div class="item-input">
+                                        <textarea   placeholder="Comentarios"></textarea>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </li>
-                </ul>
+
+
+            </form>
+
+            <div class="content block">
+                <a href="#" onclick="javascript:validacionProtur();" id="enviarFormulario" class="button button-fill button-raised boton-chico form-to-data">Enviar </a>
             </div>
 
-                <a href="#"  id="enviarFormulario" class="button button-fill button-raised boton-chico">Enviar </a>
-            </form>
         </div>
     </div>
-
-
+</div>
 
