--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -19,7 +19,7 @@
 
         <div class="content-block">
             <br>
-            <form class="list-block background-light" id="proturForm">
+            <form class="list-block inset background-light" id="proturForm">
 
 
                             <div class="item-content">
@@ -27,7 +27,7 @@
                                 <div class="item-inner">
 
                                     <div class="item-input">
-                                        <input type="text" placeholder="Nombre y Apellido">
+                                        <input id="nya" type="text" placeholder="Nombre y Apellido">
                                     </div>
                                 </div>
                             </div>
@@ -36,7 +36,7 @@
                                 <div class="item-media"><i class="icon f7-icons  color-red">email</i></div>
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <input type="email" placeholder="Correo electrónico">
+                                        <input id="mail" type="email" placeholder="Correo electrónico">
                                     </div>
                                 </div>
                             </div>
@@ -45,16 +45,16 @@
                                 <div class="item-media"><i class="icon f7-icons color-red">phone_fill</i></div>
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <input class="asdf" type="email" placeholder="Teléfono">
+                                        <input id="tel1" type="text" placeholder="Teléfono">
                                     </div>
                                 </div>
                             </div>
 
                             <div class="item-content">
-                                <div class="item-media"><i class="icon f7-icons  color-red">telephone</i></div>
+                                <div class="item-media"><i class="icon f7-icons  color-red">phone</i></div>
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <input type="email" placeholder="Otro teléfono (Si es posible)">
+                                        <input id="tel2" type="text" placeholder="Otro teléfono (Si es posible)">
                                     </div>
                                 </div>
                             </div>
@@ -63,27 +63,27 @@
                                 <div class="item-title label">Departamento</div>
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <select>
+                                        <select id="depto">
                                             <option value="0">Otro</option>
-                                            <option value="1">25 de Mayo</option>
-                                            <option value="2">9 de Julio</option>
-                                            <option value="3">Albardón</option>
-                                            <option value="4">Angaco</option>
-                                            <option value="5">Calingasta</option>
-                                            <option value="6">Capital</option>
-                                            <option value="7">Caucete</option>
-                                            <option value="8">Chimbas</option>
-                                            <option value="9">Iglesia</option>
-                                            <option value="10">Jachal</option>
-                                            <option value="11">Pocito</option>
-                                            <option value="12">Rawson</option>
-                                            <option value="13">Rivadavia</option>
-                                            <option value="14">San Martín</option>
-                                            <option value="15">Santa Lucía</option>
-                                            <option value="16">Sarmiento</option>
-                                            <option value="17">Ullum</option>
-                                            <option value="18">Valle Fértil</option>
-                                            <option value="19">Zonda</option>
+                                            <option value="427">25 de Mayo</option>
+                                            <option value="436">9 de Julio</option>
+                                            <option value="442">Albardón</option>
+                                            <option value="443">Angaco</option>
+                                            <option value="441">Calingasta</option>
+                                            <option value="439">Capital</option>
+                                            <option value="440">Caucete</option>
+                                            <option value="437">Chimbas</option>
+                                            <option value="438">Iglesia</option>
+                                            <option value="435">Jachal</option>
+                                            <option value="434">Pocito</option>
+                                            <option value="433">Rawson</option>
+                                            <option value="430">Rivadavia</option>
+                                            <option value="429">San Martín</option>
+                                            <option value="431">Santa Lucía</option>
+                                            <option value="432">Sarmiento</option>
+                                            <option value="425">Ullum</option>
+                                            <option value="426">Valle Fértil</option>
+                                            <option value="428">Zonda</option>
                                         </select>
                                     </div>
                                 </div>
@@ -92,7 +92,7 @@
                             <div class="item-content">
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <input type="email" placeholder="Dirección">
+                                        <input id="dir" type="text" placeholder="Dirección">
                                     </div>
                                 </div>
                             </div>
@@ -102,7 +102,7 @@
                                 <div class="item-inner">
 
                                     <div class="item-input">
-                                        <textarea   placeholder="Comentarios"></textarea>
+                                        <textarea  id="coment" placeholder="Comentarios"></textarea>
                                     </div>
                                 </div>
                             </div>
