--- a/SanJuanSaludAPP/www/formularioProtur.html
+++ b/SanJuanSaludAPP/www/formularioProtur.html
@@ -19,7 +19,7 @@
 
         <div class="content-block">
             <br>
-            <form class="list-block inset background-light" id="proturForm">
+            <form class="list-block inset background-light" id="proturForm" name="proturForm">
 
 
                             <div class="item-content">
@@ -92,7 +92,7 @@
                             <div class="item-content">
                                 <div class="item-inner">
                                     <div class="item-input">
-                                        <input id="dir" type="text" placeholder="Dirección">
+                                        <input name="dir" id="dir" type="text" placeholder="Dirección" >
                                     </div>
                                 </div>
                             </div>
